# nyc_inspections

./: .gitignore  README.md  pyproject.toml
models/: best_rf_params.json
notebooks/: nyc_inspections_I.ipynb
src/: preprocess.py
